--- a/src/Views/Launcher.axaml
+++ b/src/Views/Launcher.axaml
@@ -203,7 +203,7 @@
                         <ToolTip.Tip>
                           <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
                             <TextBlock Text="{DynamicResource Text.PageTabBar.Tab.Close}" VerticalAlignment="Center"/>
-                            <TextBlock Margin="16,0,0,0" Text="Ctrl+W" Opacity=".6" FontSize="11" VerticalAlignment="Center"/>
+                            <TextBlock Margin="16,0,0,0" Text="{OnPlatform Ctrl+W, macOS=⌘+W}" Opacity=".6" FontSize="11" VerticalAlignment="Center"/>
                           </StackPanel>
                         </ToolTip.Tip>
                         <Path Width="8" Height="8" Data="{StaticResource Icons.Window.Close}"/>
@@ -226,12 +226,11 @@
             <Button Classes="icon_button"
                     Width="16" Height="16"
                     Margin="8,0"
-                    Command="{Binding AddNewTab}"
-                    HotKey="Ctrl+T">
+                    Command="{Binding AddNewTab}">
               <ToolTip.Tip>
                 <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
                   <TextBlock Text="{DynamicResource Text.PageTabBar.New}" VerticalAlignment="Center"/>
-                  <TextBlock Margin="16,0,0,0" Text="Ctrl+T" Opacity=".6" FontSize="11" VerticalAlignment="Center"/>
+                  <TextBlock Margin="16,0,0,0" Text="{OnPlatform Ctrl+T, macOS=⌘+T}" Opacity=".6" FontSize="11" VerticalAlignment="Center"/>
                 </StackPanel>
               </ToolTip.Tip>
               
