--- a/src/Views/DeleteBranch.axaml
+++ b/src/Views/DeleteBranch.axaml
@@ -11,10 +11,21 @@
     <TextBlock FontSize="18"
                Classes="bold"
                Text="{DynamicResource Text.DeleteBranch}"/>
-    <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,16,0,0">
-      <TextBlock Text="{DynamicResource Text.DeleteBranch.Branch}"/>
-      <Path Width="14" Height="14" Margin="8,0" Data="{StaticResource Icons.Branch}"/>
-      <TextBlock Text="{Binding Target, Converter={x:Static c:BranchConverters.ToName}}"/>
-    </StackPanel>
+    
+    <Grid Margin="0,16,8,0" RowDefinitions="32,Auto" ColumnDefinitions="150,*">
+      <TextBlock Grid.Row="0" Grid.Column="0" HorizontalAlignment="Right" Text="{DynamicResource Text.DeleteBranch.Branch}"/>
+      <StackPanel Grid.Row="0" Grid.Column="1" Orientation="Horizontal">
+        <Path Width="14" Height="14" Margin="8,0" Data="{StaticResource Icons.Branch}"/>
+        <TextBlock Text="{Binding Target, Converter={x:Static c:BranchConverters.ToName}}"/>
+      </StackPanel>
+
+      <Border Grid.Row="1" Grid.Column="1" Height="32" IsVisible="{Binding !Target.IsLocal}">
+        <TextBlock Margin="8,0"
+                   Text="{DynamicResource Text.DeleteBranch.IsRemoteTip}"
+                   Foreground="{DynamicResource Brush.FG2}"
+                   FontStyle="Italic"
+                   VerticalAlignment="Center"/>
+      </Border>
+    </Grid>
   </StackPanel>
 </UserControl>
