--- a/src/Views/DeleteBranch.axaml
+++ b/src/Views/DeleteBranch.axaml
@@ -2,7 +2,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:m="using:SourceGit.Models"
              xmlns:vm="using:SourceGit.ViewModels"
+             xmlns:v="using:SourceGit.Views"
              xmlns:c="using:SourceGit.Converters"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="SourceGit.Views.DeleteBranch"
@@ -12,7 +14,7 @@
                Classes="bold"
                Text="{DynamicResource Text.DeleteBranch}"/>
     
-    <Grid Margin="0,16,8,0" RowDefinitions="32,Auto" ColumnDefinitions="150,*">
+    <Grid Margin="0,16,8,0" RowDefinitions="32,Auto" ColumnDefinitions="120,*">
       <TextBlock Grid.Row="0" Grid.Column="0" HorizontalAlignment="Right" Text="{DynamicResource Text.DeleteBranch.Branch}"/>
       <StackPanel Grid.Row="0" Grid.Column="1" Orientation="Horizontal">
         <Path Width="14" Height="14" Margin="8,0" Data="{StaticResource Icons.Branch}"/>
@@ -20,11 +22,15 @@
       </StackPanel>
 
       <Border Grid.Row="1" Grid.Column="1" Height="32" IsVisible="{Binding !Target.IsLocal}">
-        <TextBlock Margin="8,0"
+        <TextBlock Margin="6,0,0,0"
                    Text="{DynamicResource Text.DeleteBranch.IsRemoteTip}"
                    Foreground="{DynamicResource Brush.FG2}"
                    FontStyle="Italic"
                    VerticalAlignment="Center"/>
+      </Border>
+
+      <Border Grid.Row="1" Grid.Column="1" Height="32" IsVisible="{Binding TrackingRemoteBranch, Converter={x:Static ObjectConverters.IsNotNull}}">
+        <CheckBox Margin="6,0,0,0" Content="{Binding DeleteTrackingRemoteTip}" IsChecked="{Binding AlsoDeleteTrackingRemote, Mode=TwoWay}"/>
       </Border>
     </Grid>
   </StackPanel>
