--- a/src/Views/CommitChanges.axaml
+++ b/src/Views/CommitChanges.axaml
@@ -23,7 +23,8 @@
                  BorderThickness="1" BorderBrush="{DynamicResource Brush.Border2}" 
                  Background="Transparent"
                  Watermark="{DynamicResource Text.CommitDetail.Changes.Search}"
-                 Text="{Binding SearchChangeFilter, Mode=TwoWay}">
+                 Text="{Binding SearchChangeFilter, Mode=TwoWay}"
+                 v:AutoFocusBehaviour.IsEnabled="True">
           <TextBox.InnerLeftContent>
             <Path Width="14" Height="14" Margin="4,0,0,0" Fill="{DynamicResource Brush.FG2}" Data="{StaticResource Icons.Search}"/>
           </TextBox.InnerLeftContent>
