--- a/src/Views/Preference.axaml
+++ b/src/Views/Preference.axaml
@@ -231,7 +231,7 @@
             <TextBlock Classes="tab_header" Text="{DynamicResource Text.Preference.Git}"/>
           </TabItem.Header>
 
-          <Grid Margin="8" RowDefinitions="32,32,Auto,32,32,32,32,32" ColumnDefinitions="Auto,*">
+          <Grid Margin="8" RowDefinitions="32,32,Auto,32,32,32,32,32,32" ColumnDefinitions="Auto,*">
             <TextBlock Grid.Row="0" Grid.Column="0"
                        Text="{DynamicResource Text.Preference.Git.Path}"
                        HorizontalAlignment="Right"
@@ -351,6 +351,28 @@
             <CheckBox Grid.Row="7" Grid.Column="1"
                       Content="{DynamicResource Text.Preference.Git.AutoFetch}"
                       IsChecked="{Binding GitAutoFetch, Mode=TwoWay}"/>
+
+            <TextBlock Grid.Row="8" Grid.Column="0"
+                       IsVisible="{Binding GitAutoFetch}"
+                       Text="{DynamicResource Text.Preference.Git.AutoFetchInterval}"
+                       HorizontalAlignment="Right"
+                       Margin="0,0,16,0"/>
+            <Grid Grid.Row="8" Grid.Column="1" ColumnDefinitions="*,Auto" IsVisible="{Binding GitAutoFetch}">
+              <NumericUpDown Grid.Column="0"
+                             Minimum="1" Maximum="60" Increment="1"
+                             Height="28"
+                             Padding="4"
+                             BorderThickness="1" BorderBrush="{DynamicResource Brush.Border1}"
+                             CornerRadius="3"
+                             ParsingNumberStyle="Integer"
+                             FormatString="0"
+                             Value="{Binding GitAutoFetchInterval, Mode=TwoWay, FallbackValue=10}">
+              </NumericUpDown>
+              <TextBlock Grid.Column="1"
+                         VerticalAlignment="Center"
+                         Margin="5,0,0,0"
+                         Text="min (1-60)" />
+            </Grid>
           </Grid>
         </TabItem>
 
