--- a/src/Views/Preference.axaml
+++ b/src/Views/Preference.axaml
@@ -231,7 +231,7 @@
             <TextBlock Classes="tab_header" Text="{DynamicResource Text.Preference.Git}"/>
           </TabItem.Header>
 
-          <Grid Margin="8" RowDefinitions="32,32,Auto,32,32,32,32,32,32" ColumnDefinitions="Auto,*">
+          <Grid Margin="8" RowDefinitions="32,32,Auto,32,32,32,32,32,Auto" ColumnDefinitions="Auto,*">
             <TextBlock Grid.Row="0" Grid.Column="0"
                        Text="{DynamicResource Text.Preference.Git.Path}"
                        HorizontalAlignment="Right"
@@ -357,7 +357,7 @@
                        Text="{DynamicResource Text.Preference.Git.AutoFetchInterval}"
                        HorizontalAlignment="Right"
                        Margin="0,0,16,0"/>
-            <Grid Grid.Row="8" Grid.Column="1" ColumnDefinitions="*,Auto" IsVisible="{Binding GitAutoFetch}">
+            <Grid Grid.Row="8" Grid.Column="1" Height="32" ColumnDefinitions="*,Auto" IsVisible="{Binding GitAutoFetch}">
               <NumericUpDown Grid.Column="0"
                              Minimum="1" Maximum="60" Increment="1"
                              Height="28"
@@ -367,11 +367,24 @@
                              ParsingNumberStyle="Integer"
                              FormatString="0"
                              Value="{Binding GitAutoFetchInterval, Mode=TwoWay, FallbackValue=10}">
+                <NumericUpDown.Styles>
+                  <Style Selector="NumericUpDown /template/ ButtonSpinner#PART_Spinner">
+                    <Setter Property="MinHeight" Value="0"/>
+                    <Setter Property="Height" Value="28"/>
+                  </Style>
+                  <Style Selector="NumericUpDown /template/ TextBox#PART_TextBox">
+                    <Setter Property="MinHeight" Value="0"/>
+                    <Setter Property="Height" Value="28"/>
+                    <Setter Property="VerticalContentAlignment" Value="Center"/>
+                    <Setter Property="CornerRadius" Value="3,0,0,3"/>
+                  </Style>
+                </NumericUpDown.Styles>
               </NumericUpDown>
+              
               <TextBlock Grid.Column="1"
                          VerticalAlignment="Center"
                          Margin="5,0,0,0"
-                         Text="min (1-60)" />
+                         Text="{DynamicResource Text.Preference.Git.AutoFetchIntervalSuffix}" />
             </Grid>
           </Grid>
         </TabItem>
