--- a/src/Views/Repository.axaml
+++ b/src/Views/Repository.axaml
@@ -109,7 +109,7 @@
       </Grid.ColumnDefinitions>
 
       <!-- Left Normal Mode -->
-      <Grid Grid.Column="0" RowDefinitions="28,Auto,28,Auto,28,*,28,Auto,28,Auto" Margin="0,0,0,4" IsVisible="{Binding !IsSearching}">
+      <Grid Grid.Column="0" RowDefinitions="28,Auto,5,28,28,Auto,28,*,28,Auto,28,Auto" Margin="0,0,0,4" IsVisible="{Binding !IsSearching}">
         <!-- WorkingCopy -->
         <TextBlock Grid.Row="0" Classes="group_header_label" Text="{DynamicResource Text.Repository.Workspace}"/>
         <ListBox Grid.Row="1" Classes="page_switcher" Background="Transparent" SelectedIndex="{Binding SelectedViewIndex, Mode=TwoWay}">
@@ -159,9 +159,42 @@
           </ListBoxItem>
         </ListBox>
 
+        <!-- Filter Branches -->
+        <Rectangle Grid.Row="2" Height=".65" HorizontalAlignment="Stretch" VerticalAlignment="Center" Fill="{DynamicResource Brush.Border2}"/>
+        <TextBox Grid.Row="3"
+                 Margin="4,2,4,0"
+                 Height="24"
+                 BorderThickness="1"
+                 BorderBrush="{DynamicResource Brush.Border2}"
+                 Background="{DynamicResource Brush.Contents}"
+                 Watermark="{DynamicResource Text.Repository.FilterBranchTip}"
+                 Text="{Binding SearchBranchFilter, Mode=TwoWay}"
+                 VerticalContentAlignment="Center">
+          <TextBox.InnerLeftContent>
+            <Path Width="14" Height="14"
+                  Margin="6,0,0,0"
+                  Fill="{DynamicResource Brush.FG2}"
+                  Data="{StaticResource Icons.Search}"/>
+          </TextBox.InnerLeftContent>
+
+          <TextBox.InnerRightContent>
+            <Button Classes="icon_button"
+                    Width="16"
+                    Margin="0,0,6,0"
+                    Command="{Binding ClearSearchBranchFilter}"
+                    IsVisible="{Binding SearchBranchFilter, Converter={x:Static StringConverters.IsNotNullOrEmpty}}"
+                    HorizontalAlignment="Right">
+              <Path Width="14" Height="14"
+                    Margin="0,1,0,0"
+                    Fill="{DynamicResource Brush.FG1}"
+                    Data="{StaticResource Icons.Clear}"/>
+            </Button>
+          </TextBox.InnerRightContent>
+        </TextBox>
+        
         <!-- Local Branches -->
-        <TextBlock Grid.Row="2" Classes="group_header_label" Text="{DynamicResource Text.Repository.LocalBranches}"/>
-        <TreeView Grid.Row="3"
+        <TextBlock Grid.Row="4" Classes="group_header_label" Text="{DynamicResource Text.Repository.LocalBranches}"/>
+        <TreeView Grid.Row="5"
                   x:Name="localBranchTree"
                   MaxHeight="400"
                   ItemsSource="{Binding LocalBranchTrees}"
@@ -170,12 +203,12 @@
                   LostFocus="OnLocalBranchTreeLostFocus"
                   SelectionChanged="OnLocalBranchTreeSelectionChanged">
           <TreeView.Styles>
-            <Style Selector="TreeViewItem" x:DataType="m:BranchTreeNode">
+            <Style Selector="TreeViewItem" x:DataType="vm:BranchTreeNode">
               <Setter Property="IsExpanded" Value="{Binding IsExpanded, Mode=TwoWay}"/>
             </Style>
           </TreeView.Styles>
           <TreeView.ItemTemplate>
-            <TreeDataTemplate ItemsSource="{Binding Children}" x:DataType="{x:Type m:BranchTreeNode}">
+            <TreeDataTemplate ItemsSource="{Binding Children}" x:DataType="{x:Type vm:BranchTreeNode}">
               <Grid Height="24" ColumnDefinitions="20,*,Auto,Auto" Background="Transparent" ContextRequested="OnLocalBranchContextMenuRequested" DoubleTapped="OnDoubleTappedLocalBranchNode">
                 <Path Grid.Column="0" Classes="folder_icon" Width="12" Height="12" HorizontalAlignment="Left" Margin="0,1,0,0" IsVisible="{Binding IsFolder}"/>
                 <Path Grid.Column="0" Width="12" Height="12" HorizontalAlignment="Left" Margin="0,2,0,0" Data="{StaticResource Icons.Check}" IsVisible="{Binding IsCurrent}" VerticalAlignment="Center"/>
@@ -208,13 +241,13 @@
         </TreeView>
 
         <!-- Remotes -->
-        <Grid Grid.Row="4" ColumnDefinitions="*,Auto">
+        <Grid Grid.Row="6" ColumnDefinitions="*,Auto">
           <TextBlock Grid.Column="0" Classes="group_header_label" Text="{DynamicResource Text.Repository.Remotes}"/>
           <Button Grid.Column="1" Classes="icon_button" Width="14" Margin="8,0" Command="{Binding AddRemote}" ToolTip.Tip="{DynamicResource Text.Repository.Remotes.Add}">
             <Path Width="12" Height="12" Data="{StaticResource Icons.Remote.Add}"/>
           </Button>
         </Grid>
-        <TreeView Grid.Row="5"
+        <TreeView Grid.Row="7"
                   x:Name="remoteBranchTree"
                   ItemsSource="{Binding RemoteBranchTrees}"
                   ScrollViewer.HorizontalScrollBarVisibility="Disabled"
@@ -222,13 +255,13 @@
                   LostFocus="OnRemoteBranchTreeLostFocus"
                   SelectionChanged="OnRemoteBranchTreeSelectionChanged">
           <TreeView.Styles>
-            <Style Selector="TreeViewItem" x:DataType="m:BranchTreeNode">
+            <Style Selector="TreeViewItem" x:DataType="vm:BranchTreeNode">
               <Setter Property="IsExpanded" Value="{Binding IsExpanded, Mode=TwoWay}"/>
             </Style>
           </TreeView.Styles>
 
           <TreeView.ItemTemplate>
-            <TreeDataTemplate ItemsSource="{Binding Children}" x:DataType="{x:Type m:BranchTreeNode}">
+            <TreeDataTemplate ItemsSource="{Binding Children}" x:DataType="{x:Type vm:BranchTreeNode}">
               <Grid Height="24" ColumnDefinitions="20,*,Auto" Background="Transparent" ContextRequested="OnRemoteBranchContextMenuRequested">
                 <Path Grid.Column="0" Classes="folder_icon" Width="10" Height="10" HorizontalAlignment="Left" Margin="0,2,0,0" IsVisible="{Binding IsFolder}" VerticalAlignment="Center"/>
                 <Path Grid.Column="0" Width="12" Height="12" HorizontalAlignment="Left" Margin="0,2,0,0" Data="{StaticResource Icons.Remote}" IsVisible="{Binding IsRemote}" VerticalAlignment="Center"/>
@@ -250,7 +283,7 @@
         </TreeView>
 
         <!-- Tags -->
-        <ToggleButton Grid.Row="6" Classes="group_expander" IsChecked="{Binding IsTagGroupExpanded, Mode=TwoWay}">
+        <ToggleButton Grid.Row="8" Classes="group_expander" IsChecked="{Binding IsTagGroupExpanded, Mode=TwoWay}">
           <Grid ColumnDefinitions="Auto,*,Auto">
             <TextBlock Grid.Column="0" Classes="group_header_label" Margin="4,0,0,0" Text="{DynamicResource Text.Repository.Tags}"/>
             <TextBlock Grid.Column="1" Text="{Binding Tags, Converter={x:Static c:ListConverters.ToCount}}" Foreground="{DynamicResource Brush.FG2}" FontWeight="Bold"/>
@@ -259,7 +292,7 @@
             </Button>
           </Grid>
         </ToggleButton>
-        <DataGrid Grid.Row="7"
+        <DataGrid Grid.Row="9"
                   MaxHeight="200"
                   Background="Transparent"
                   ItemsSource="{Binding Tags}"
@@ -310,7 +343,7 @@
         </DataGrid>
 
         <!-- Submodules -->
-        <ToggleButton Grid.Row="8" Classes="group_expander" IsChecked="{Binding IsSubmoduleGroupExpanded, Mode=TwoWay}">
+        <ToggleButton Grid.Row="10" Classes="group_expander" IsChecked="{Binding IsSubmoduleGroupExpanded, Mode=TwoWay}">
           <Grid ColumnDefinitions="Auto,*,Auto,Auto">
             <TextBlock Grid.Column="0" Classes="group_header_label" Margin="4,0,0,0" Text="{DynamicResource Text.Repository.Submodules}"/>
             <TextBlock Grid.Column="1" Text="{Binding Submodules, Converter={x:Static c:ListConverters.ToCount}}" Foreground="{DynamicResource Brush.FG2}" FontWeight="Bold"/>
@@ -328,7 +361,7 @@
             </Button>
           </Grid>
         </ToggleButton>
-        <DataGrid Grid.Row="9"
+        <DataGrid Grid.Row="11"
                   MaxHeight="200"
                   Background="Transparent"
                   ItemsSource="{Binding Submodules}"
