--- a/src/Views/Repository.axaml
+++ b/src/Views/Repository.axaml
@@ -162,9 +162,10 @@
         <!-- Filter Branches -->
         <Rectangle Grid.Row="2" Height=".65" HorizontalAlignment="Stretch" VerticalAlignment="Center" Fill="{DynamicResource Brush.Border2}"/>
         <TextBox Grid.Row="3"
-                 Margin="4,2,4,0"
+                 Margin="4,2,1,0"
                  Height="24"
                  BorderThickness="1"
+                 CornerRadius="3"
                  BorderBrush="{DynamicResource Brush.Border2}"
                  Background="{DynamicResource Brush.Contents}"
                  Watermark="{DynamicResource Text.Repository.FilterBranchTip}"
